# cuModule-invalid-ptx

./: .gitmodules  CMakeLists.txt  README.md  kernel.cu  main.cpp
